添加h5链接的跳转

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -156,7 +156,7 @@
                             android:layout_centerVertical="true" />
                         <!--商城等级-->
                         <LinearLayout
-                            android:id="@+id/ly_doufen"
+                            android:id="@+id/ly_top_shop_level"
                             android:layout_width="wrap_content"
                             android:layout_height="22dp"
                             android:layout_above="@+id/middle_view"
