--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <com.tudouni.makemoney.view.MyTitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:middleText="消息" />
+
+    <View style="@style/horizontalLine" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_message"
         android:layout_width="match_parent"
