--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <!--<item name="android:windowTranslucentStatus" tools:ignore="NewApi">true</item>-->
         <item name="windowActionBar">false</item>
+        <item name="android:listDivider">@drawable/divider</item>
     </style>
 
     <style name="dialog">
