--- a/app/src/main/res/drawable/get_vcode_style_01.xml
+++ b/app/src/main/res/drawable/get_vcode_style_01.xml
@@ -16,8 +16,8 @@
     <item android:state_selected="true">
         <shape >
             <gradient
-                android:endColor="@color/color_fccd02"
-                android:startColor="@color/color_fccd02" />
+                android:endColor="@color/color_E81534"
+                android:startColor="@color/color_E81534" />
             <!--<solid android:color="#f8af01" />-->
             <!--<stroke android:width="0.5dip" android:color="#f8af01"/>-->
 
