--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,9 @@
     <color name="color_f4f5f9">#f4f5f9</color>
     <color name="color_26A5FF">#26A5FF</color>
     <color name="color_FDCE00">#FDCE00</color>
+    <color name="color_E81534">#E81534</color>
+    <color name="color_E81833">#E81833</color>
+    <color name="color_F3751C">#F3751C</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#333333</color>
