--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="@color/color_fccd02"
-        android:startColor="@color/color_fccd02" />
+        android:startColor="@color/color_E81534"
+        android:centerColor="@color/color_F3751C"
+        android:endColor="@color/color_E81534" />
     <!--<solid android:color="#f8af01" />-->
     <!--<stroke android:width="0.5dip" android:color="#f8af01"/>-->
 
