--- a/app/src/main/res/drawable/login_button_selector.xml
+++ b/app/src/main/res/drawable/login_button_selector.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <gradient android:endColor="@color/color_fccd02" android:startColor="@color/color_fccd02" />
+            <gradient
+                android:startColor="@color/color_E81534"
+                android:centerColor="@color/color_F3751C"
+                android:endColor="@color/color_E81534"/> />
             <corners android:radius="5dp" />
         </shape>
     </item>
