--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/newbackgourdim" />
+        android:background="@color/white" />
 
     <Button
         android:id="@+id/btn_net_env"
@@ -28,57 +28,104 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/color_999999_13_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="0dp"
+            android:textColor="@color/color_999999"
+            android:textSize="12sp"
             android:gravity="center"
             android:text="其他登录方式" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="18dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
+            android:layout_marginBottom="24dp"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <!--QQ-->
-            <ImageView
-                android:id="@+id/iv_QqLogin"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:gravity="center_horizontal"
-                android:scaleType="fitCenter"
-                android:padding="10dp"
-                android:layout_weight="1"
-                android:src="@mipmap/landing_page_qq" />
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <!--微信-->
-            <ImageView
-                android:id="@+id/iv_WechatLogin"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:scaleType="fitCenter"
-                android:padding="10dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:src="@mipmap/landing_page_wechat" />
+                <!--微信-->
+                <ImageView
+                    android:id="@+id/iv_WechatLogin"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@mipmap/ic_share_new_wx" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="@color/color_999999"
+                    android:layout_gravity="center_horizontal"
+                    android:text="微信"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp">
+
+                <!--QQ-->
+                <ImageView
+                    android:id="@+id/iv_QqLogin"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/ic_share_new_qq" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="@color/color_999999"
+                    android:layout_gravity="center_horizontal"
+                    android:text="QQ"/>
+            </LinearLayout>
         </LinearLayout>
 
-        <TextView
+        <LinearLayout
             android:id="@+id/xy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="登录即表示同意《服务协议》"
-            android:layout_marginTop="14dp"
+            android:gravity="center_horizontal"
             android:layout_marginBottom="18dp"
-            android:textColor="@color/color_999999"
-            android:textSize="12sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="登录即表示同意 "
+                android:textColor="@color/color_999999"
+                android:autoLink="all"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/activity_login_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="赚赚服务协议"
+                android:textColor="@color/color_E81833"
+                android:autoLink="all"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -110,10 +157,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
-                android:orientation="vertical"
-                android:background="@drawable/circle_border_shape">
+                android:layout_marginLeft="46dp"
+                android:layout_marginRight="46dp"
+                android:orientation="vertical">
 
                 <include
                     layout="@layout/tel_login"/>
@@ -127,9 +173,9 @@
                 android:id="@+id/tv_commit"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="46dp"
+                android:layout_marginRight="46dp"
+                android:layout_marginTop="14dp"
                 android:background="@drawable/login_button_selector"
                 android:gravity="center"
                 android:text="@string/login"
@@ -154,7 +200,7 @@
 
                 <TextView
                     android:id="@+id/login_mode_change_view"
-                    style="@style/color_999999_13_style"
+                    style="@style/color_E81833_13_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
