--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -221,7 +221,7 @@
                     android:background="@drawable/button_shape"
                     android:gravity="center"
                     android:text="@string/logout"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
 
