--- a/app/src/main/res/layout/my_title_bar.xml
+++ b/app/src/main/res/layout/my_title_bar.xml
@@ -9,14 +9,14 @@
         android:id="@+id/status_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_title_bar"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:background="@drawable/shape_mall_title_bg"/>
 
     <RelativeLayout
         android:id="@+id/head"
         android:layout_width="fill_parent"
         android:layout_height="45dp"
-        android:background="@color/white">
+        android:background="@drawable/shape_mall_title_bg">
 
         <LinearLayout
             android:id="@+id/rl_back_layer"
@@ -31,7 +31,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:padding="6dp"
-                android:src="@mipmap/common_back" />
+                android:src="@mipmap/icon_back" />
 
             <TextView
                 android:id="@+id/tv_left"
@@ -53,7 +53,7 @@
             android:layout_centerInParent="true"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="Title" />
 
