--- a/app/src/main/res/layout/password_login_child_layout.xml
+++ b/app/src/main/res/layout/password_login_child_layout.xml
@@ -2,21 +2,39 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <EditText
-        android:id="@+id/phone_number_et"
+
+    <LinearLayout
+        android:id="@+id/password_layout_1"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@android:color/transparent"
-        android:hint="@string/input_phone_number_hint"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:visibility="gone"
-        android:inputType="number"
-        android:lines="1"
-        android:maxLength="11"
-        android:textCursorDrawable="@null"
-        android:textColor="@color/color_333333"
-        android:textColorHint="@color/color_999999"
-        android:textSize="14sp" />
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/login_head_icon"/>
+
+        <EditText
+            android:id="@+id/phone_number_et"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@android:color/transparent"
+            android:hint="@string/input_phone_number_hint"
+            android:layout_marginLeft="6dp"
+            android:inputType="number"
+            android:lines="1"
+            android:maxLength="11"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/color_333333"
+            android:textColorHint="@color/color_999999"
+            android:textSize="14sp" />
+
+    </LinearLayout>
 
     <View
         android:id="@+id/password_login_child_layout_line"
@@ -25,20 +43,45 @@
         android:visibility="gone"
         android:background="@color/color_cccccc"/>
 
-    <EditText
-        android:id="@+id/comfirm_pasword_et"
+    <LinearLayout
+        android:id="@+id/password_layout_2"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:layout_marginLeft="8dp"
-        android:background="@android:color/transparent"
-        android:hint="@string/password_login_input_hint"
-        android:inputType="textPassword"
+        android:layout_marginTop="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:visibility="gone"
-        android:lines="1"
-        android:maxLength="16"
-        android:textCursorDrawable="@null"
-        android:textColorHint="@color/color_999999"
-        android:textColor="@color/color_333333"
-        android:textSize="14sp" />
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/login_pw_icon"/>
+
+        <EditText
+            android:id="@+id/comfirm_pasword_et"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginLeft="6dp"
+            android:background="@android:color/transparent"
+            android:hint="@string/password_login_input_hint"
+            android:inputType="textPassword"
+            android:lines="1"
+            android:maxLength="16"
+            android:textCursorDrawable="@null"
+            android:textColorHint="@color/color_999999"
+            android:textColor="@color/color_333333"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/password_login_child_layout_line2"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:visibility="gone"
+        android:background="@color/color_cccccc"/>
+
 
 </merge>
