--- a/app/src/main/res/layout/tel_login.xml
+++ b/app/src/main/res/layout/tel_login.xml
@@ -12,20 +12,17 @@
         android:focusableInTouchMode="true"
         android:gravity="center_vertical">
 
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="+86"
-            android:textColor="@color/color_333333"
-            android:textSize="13sp"
-            android:visibility="gone" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/login_head_icon"/>
 
         <EditText
             android:id="@+id/etTelNumber"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="6dp"
             android:layout_weight="1"
             android:background="@null"
             android:hint="@string/input_phone_number_hint"
@@ -62,20 +59,17 @@
         android:layout_width="match_parent"
         android:layout_height="44dp">
 
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/vcode"
-            android:textColor="@color/color_333333"
-            android:textSize="12sp"
-            android:visibility="gone" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/login_pw_icon"/>
 
         <EditText
             android:id="@+id/etCode"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="6dp"
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入验证码"
@@ -86,4 +80,10 @@
             android:textScaleX="0.99"
             android:textSize="14sp" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/tel_login_line1"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/color_cccccc" />
 </merge>
