--- a/app/src/main/res/layout/mall_header_view.xml
+++ b/app/src/main/res/layout/mall_header_view.xml
@@ -1,20 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.zhouwei.mzbanner.MZBannerView
-        android:id="@+id/mz_mall_banner"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        app:canLoop="true"
-        app:indicatorAlign="center"
-        app:indicatorPaddingLeft="10dp"
-        app:middle_page_cover="false"
-        app:open_mz_mode="false" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.zhouwei.mzbanner.MZBannerView
+            android:id="@+id/mz_mall_banner"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            app:canLoop="true"
+            android:background="#33eaba00"
+            app:indicatorAlign="center"
+            app:indicatorPaddingLeft="10dp"
+            app:middle_page_cover="false"
+            app:open_mz_mode="false" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_album"
+            android:layout_width="match_parent"
+            android:layout_height="103dp" />
+
+        <!-- 自营品类 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_self_category0"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#22ff0000" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="3dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_self_category1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="#2200ff00" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/iv_self_category2"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#220000ff" />
+
+                    <ImageView
+                        android:id="@+id/iv_self_category3"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="3dp"
+                        android:layout_weight="1"
+                        android:background="#22eeaadd" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
 
 
-
-</LinearLayout>
+    </LinearLayout>
+</layout>
