--- a/app/src/main/res/layout/mall_header_view.xml
+++ b/app/src/main/res/layout/mall_header_view.xml
@@ -4,7 +4,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <com.zhouwei.mzbanner.MZBannerView
@@ -77,6 +77,16 @@
             </LinearLayout>
         </LinearLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:drawableLeft="@drawable/mall_recommend_left"
+            android:drawableRight="@drawable/mall_recommend_right"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#e61c3a"
+            android:text="  好物推荐  "
+            android:textSize="14sp"
+            android:layout_height="45dp" />
 
     </LinearLayout>
 </layout>
