--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,12 @@
     <color name="color_E81534">#E81534</color>
     <color name="color_E81833">#E81833</color>
     <color name="color_F3751C">#F3751C</color>
+    <color name="color_E1E1E1">#E1E1E1</color>
+    <color name="color_4F4F4F">#4F4F4F</color>
+    <color name="color_FE5A5A">#FE5A5A</color>
+    <color name="color_8A552A">#8A552A</color>
+    <color name="color_FFE300">#FFE300</color>
+    <color name="color_FF9933">#FF9933</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#333333</color>
