--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,6 +15,7 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/iv_back"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:paddingBottom="11dp"
