--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -71,9 +71,10 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:layout_height="match_parent"
+            >
 
         </android.support.v7.widget.RecyclerView>
 
