--- a/app/src/main/res/layout/refresh_webview_layout.xml
+++ b/app/src/main/res/layout/refresh_webview_layout.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
     <com.tudouni.makemoney.view.MyTitleBar
         android:id="@+id/title_bar"
@@ -21,5 +20,6 @@
     <com.github.jdsjlzx.recyclerview.LRecyclerView
         android:id="@+id/three_tab_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 </LinearLayout>
