--- a/app/src/main/res/layout/found_item_layout.xml
+++ b/app/src/main/res/layout/found_item_layout.xml
@@ -9,6 +9,7 @@
         android:layout_height="160dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:scaleType="centerCrop"/>
 
 </RelativeLayout>
