--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -15,6 +15,13 @@
             android:layout_height="45dp"
             android:background="@drawable/shape_mall_title_bg">
 
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_launcher"
+                android:layout_marginLeft="10dp"
+                android:layout_height="30dp" />
+
             <TextView
                 android:id="@+id/tv_search_bar"
                 android:layout_width="match_parent"
@@ -31,6 +38,15 @@
                 android:text="    粘贴宝贝标题，先领券再购物"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/iv_msg"
+                android:layout_width="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/mall_msg_with_dot"
+                android:layout_height="wrap_content" />
 
 
         </RelativeLayout>
