搜索记录改为本地存储

--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -4,10 +4,17 @@
 
     >
 
+    <data>
+
+        <variable
+            name="mallViewModel"
+            type="com.tudouni.makemoney.viewModel.MallViewModel" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:descendantFocusability="blocksDescendants"
         android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -17,10 +24,10 @@
 
             <ImageView
                 android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
-                android:src="@mipmap/ic_launcher"
                 android:layout_marginLeft="10dp"
-                android:layout_height="30dp" />
+                android:src="@mipmap/ic_launcher" />
 
             <TextView
                 android:id="@+id/tv_search_bar"
@@ -42,20 +49,20 @@
             <ImageView
                 android:id="@+id/iv_msg"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
                 android:layout_centerVertical="true"
-                android:src="@mipmap/mall_msg_with_dot"
-                android:layout_height="wrap_content" />
+                android:layout_marginRight="10dp"
+                android:src="@{mallViewModel.hasUnreadMsg ? @drawable/mall_msg_with_dot : @drawable/user_chat}" />
 
 
         </RelativeLayout>
 
         <com.github.jdsjlzx.recyclerview.LRecyclerView
-            android:overScrollMode="never"
             android:id="@+id/lrv_home"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:overScrollMode="never" />
 
 
     </LinearLayout>
