--- a/app/src/main/res/layout/activity_face_to_face.xml
+++ b/app/src/main/res/layout/activity_face_to_face.xml
@@ -10,22 +10,30 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/white"
+        android:background="@color/color_E81534"
         android:paddingRight="10dp">
 
-        <ImageView
-            android:id="@+id/back"
+        <LinearLayout
             android:layout_width="50dp"
-            android:layout_height="44dp"
-            android:scaleType="center"
-            android:src="@mipmap/common_back_black" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="center"
+                android:src="@mipmap/icon_back" />
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="面对面邀请"
-            android:textColor="#333333"
+            android:textColor="@color/white"
             android:textSize="17sp" />
 
 
@@ -34,8 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:visibility="gone"
-            android:gravity="center">
+            android:gravity="center"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="0dp"
