--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -64,8 +64,14 @@
                 android:text="历史搜索" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:id="@+id/iv_clear_search"
+                android:layout_width="40dp"
+                android:src="@mipmap/clear_search"
+                android:scaleType="centerInside"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:layout_height="40dp" />
         </RelativeLayout>
 
 
