--- a/app/src/main/res/layout/found_item_layout.xml
+++ b/app/src/main/res/layout/found_item_layout.xml
@@ -10,6 +10,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="10dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="fitXY"/>
 
 </RelativeLayout>
