--- a/app/src/main/res/layout/found_topic_item_layout.xml
+++ b/app/src/main/res/layout/found_topic_item_layout.xml
@@ -7,6 +7,6 @@
         android:id="@+id/found_item_iv"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="fitXY"/>
 
 </RelativeLayout>
