--- a/app/src/main/res/layout/my_title_bar.xml
+++ b/app/src/main/res/layout/my_title_bar.xml
@@ -48,11 +48,13 @@
 
         <TextView
             android:id="@+id/tv_middle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:ellipsize="end"
             android:maxLines="1"
+            android:gravity="center"
+            android:layout_marginLeft="80dp"
             android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="Title" />
