--- a/app/src/main/res/layout/up_dialog.xml
+++ b/app/src/main/res/layout/up_dialog.xml
@@ -39,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="土豆泥升级"
+                    android:text="赚赚升级"
                     android:visibility="gone"
                     android:layout_margin="5dp"/>
                 <TextView
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center|left"
-                    android:text="土豆泥升级"
+                    android:text="赚赚升级"
                     android:layout_margin="5dp"/>
 
             </LinearLayout>
